--- a/spec/fixtures/cassettes/openai/chat/llm_chat_stream_stringio.yml
+++ b/spec/fixtures/cassettes/openai/chat/llm_chat_stream_stringio.yml
@@ -30,7 +30,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 26 Nov 2025 18:25:13 GMT
+      - Sun, 25 Jan 2026 17:12:00 GMT
       Content-Type:
       - text/event-stream; charset=utf-8
       Transfer-Encoding:
@@ -42,13 +42,13 @@ http_interactions:
       Openai-Organization:
       - user-j1pztzt5nogpcsid23u7gskj
       Openai-Processing-Ms:
-      - '287'
+      - '244'
       Openai-Project:
       - proj_YSiqu4bByPgi6EwPnLiY8irR
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '453'
+      - '257'
       X-Ratelimit-Limit-Requests:
       - '500'
       X-Ratelimit-Limit-Tokens:
@@ -62,16 +62,16 @@ http_interactions:
       X-Ratelimit-Reset-Tokens:
       - 122ms
       X-Request-Id:
-      - req_fd5edf9e5dc445bd873878c24a43de59
+      - req_e23299a688fe465bb6a436df23e3b8ae
       X-Openai-Proxy-Wasm:
       - v0.1
       Cf-Cache-Status:
       - DYNAMIC
       Set-Cookie:
-      - __cf_bm=M9x1.7HNzK8CjG05ORUnWbkM5VMOnHDzLNvOtjZSIcE-1764181513-1.0.1.1-i9Y6UqpSqY4Lrk_hklLyPeDPbmoMfPDEDA76YDkE4UqJBduIgju.nHJ1T11CICntPwsrKz9YZX3TYQ7plK2n6uKV0xHk5kH6pQO6gcHRmMg;
-        path=/; expires=Wed, 26-Nov-25 18:55:13 GMT; domain=.api.openai.com; HttpOnly;
+      - __cf_bm=d2SaEVoALQwxDOMV1oQTi7DlWhHUCFnYC9WnOQ3xgwk-1769361120-1.0.1.1-kwuKeDf3SoT6FixgRGC9Advg9R4u4nwCf4pgBosYkcuc4pTa9zSo2mzo12.emQIs0SUt68oC51ImCmpYm1CLe13aTcxuAL2SEZil527n3Zg;
+        path=/; expires=Sun, 25-Jan-26 17:42:00 GMT; domain=.api.openai.com; HttpOnly;
         Secure; SameSite=None
-      - _cfuvid=lyBSDSSOBynUPCRX0if1MweHKrP.thwbJlunXmCrXDY-1764181513179-0.0.1.1-604800000;
+      - _cfuvid=QTSQrSZVlKTyUNq4pFeRUqr1ZQLaGXBWU8ZhLzZWykU-1769361120972-0.0.1.1-604800000;
         path=/; domain=.api.openai.com; HttpOnly; Secure; SameSite=None
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains; preload
@@ -80,30 +80,30 @@ http_interactions:
       Server:
       - cloudflare
       Cf-Ray:
-      - 9a4b6d530ce6af47-GRU
+      - 9c39649baf27b6e6-GRU
       Alt-Svc:
       - h3=":443"; ma=86400
     body:
       encoding: UTF-8
       string: |+
-        data: {"id":"chatcmpl-CgEUSHE2TJTvaQtcjim3tyUnKwR0o","object":"chat.completion.chunk","created":1764181512,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_433e8c8649","choices":[{"index":0,"delta":{"role":"assistant","content":"","refusal":null},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"J06HSxgDkYC6P"}
+        data: {"id":"chatcmpl-D1xwWcytrOb1n9W9dP8Q9JUw3sQ5a","object":"chat.completion.chunk","created":1769361120,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_1a2c4a5ede","choices":[{"index":0,"delta":{"role":"assistant","content":"","refusal":null},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"JktPnCyw7bo6M"}
 
-        data: {"id":"chatcmpl-CgEUSHE2TJTvaQtcjim3tyUnKwR0o","object":"chat.completion.chunk","created":1764181512,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_433e8c8649","choices":[{"index":0,"delta":{"content":"5"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"EgImxkT3gb7xkd"}
+        data: {"id":"chatcmpl-D1xwWcytrOb1n9W9dP8Q9JUw3sQ5a","object":"chat.completion.chunk","created":1769361120,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_1a2c4a5ede","choices":[{"index":0,"delta":{"content":"5"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"BQI0VoHKSAdIvx"}
 
-        data: {"id":"chatcmpl-CgEUSHE2TJTvaQtcjim3tyUnKwR0o","object":"chat.completion.chunk","created":1764181512,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_433e8c8649","choices":[{"index":0,"delta":{"content":"  \n"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"aoNecQVg9T5"}
+        data: {"id":"chatcmpl-D1xwWcytrOb1n9W9dP8Q9JUw3sQ5a","object":"chat.completion.chunk","created":1769361120,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_1a2c4a5ede","choices":[{"index":0,"delta":{"content":"  \n"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"vz6uNtv68Jf"}
 
-        data: {"id":"chatcmpl-CgEUSHE2TJTvaQtcjim3tyUnKwR0o","object":"chat.completion.chunk","created":1764181512,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_433e8c8649","choices":[{"index":0,"delta":{"content":"10"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"GTxRBEoXWxVnv"}
+        data: {"id":"chatcmpl-D1xwWcytrOb1n9W9dP8Q9JUw3sQ5a","object":"chat.completion.chunk","created":1769361120,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_1a2c4a5ede","choices":[{"index":0,"delta":{"content":"10"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"IMpClUrOaORxo"}
 
-        data: {"id":"chatcmpl-CgEUSHE2TJTvaQtcjim3tyUnKwR0o","object":"chat.completion.chunk","created":1764181512,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_433e8c8649","choices":[{"index":0,"delta":{"content":"  \n"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"haSLpEGh7mi"}
+        data: {"id":"chatcmpl-D1xwWcytrOb1n9W9dP8Q9JUw3sQ5a","object":"chat.completion.chunk","created":1769361120,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_1a2c4a5ede","choices":[{"index":0,"delta":{"content":"  \n"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"0jRVTIXg6Dt"}
 
-        data: {"id":"chatcmpl-CgEUSHE2TJTvaQtcjim3tyUnKwR0o","object":"chat.completion.chunk","created":1764181512,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_433e8c8649","choices":[{"index":0,"delta":{"content":"12"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"rSMrd6QAUgaxA"}
+        data: {"id":"chatcmpl-D1xwWcytrOb1n9W9dP8Q9JUw3sQ5a","object":"chat.completion.chunk","created":1769361120,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_1a2c4a5ede","choices":[{"index":0,"delta":{"content":"12"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"3DfauACASB3ju"}
 
-        data: {"id":"chatcmpl-CgEUSHE2TJTvaQtcjim3tyUnKwR0o","object":"chat.completion.chunk","created":1764181512,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_433e8c8649","choices":[{"index":0,"delta":{},"logprobs":null,"finish_reason":"stop"}],"usage":null,"obfuscation":"O6JUPqjHP"}
+        data: {"id":"chatcmpl-D1xwWcytrOb1n9W9dP8Q9JUw3sQ5a","object":"chat.completion.chunk","created":1769361120,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_1a2c4a5ede","choices":[{"index":0,"delta":{},"logprobs":null,"finish_reason":"stop"}],"usage":null,"obfuscation":"EbY2M8meB"}
 
-        data: {"id":"chatcmpl-CgEUSHE2TJTvaQtcjim3tyUnKwR0o","object":"chat.completion.chunk","created":1764181512,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_433e8c8649","choices":[],"usage":{"prompt_tokens":79,"completion_tokens":5,"total_tokens":84,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0}},"obfuscation":"tEozfUUTRWqiPMk"}
+        data: {"id":"chatcmpl-D1xwWcytrOb1n9W9dP8Q9JUw3sQ5a","object":"chat.completion.chunk","created":1769361120,"model":"gpt-4.1-2025-04-14","service_tier":"default","system_fingerprint":"fp_1a2c4a5ede","choices":[],"usage":{"prompt_tokens":79,"completion_tokens":5,"total_tokens":84,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0}},"obfuscation":"SGuK93bwZM8JmOs"}
 
         data: [DONE]
 
-  recorded_at: Wed, 26 Nov 2025 18:24:46 GMT
+  recorded_at: Sun, 25 Jan 2026 17:11:20 GMT
 recorded_with: VCR 6.3.1
 ...
