--- a/spec/fixtures/cassettes/openai/chat/llm_file_local_image.yml
+++ b/spec/fixtures/cassettes/openai/chat/llm_file_local_image.yml
@@ -28,7 +28,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 26 Nov 2025 18:25:25 GMT
+      - Sun, 25 Jan 2026 17:12:08 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -40,13 +40,13 @@ http_interactions:
       Openai-Organization:
       - user-j1pztzt5nogpcsid23u7gskj
       Openai-Processing-Ms:
-      - '235'
+      - '387'
       Openai-Project:
       - proj_YSiqu4bByPgi6EwPnLiY8irR
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '257'
+      - '403'
       X-Ratelimit-Limit-Requests:
       - '500'
       X-Ratelimit-Limit-Tokens:
@@ -54,22 +54,22 @@ http_interactions:
       X-Ratelimit-Remaining-Requests:
       - '499'
       X-Ratelimit-Remaining-Tokens:
-      - '29886'
+      - '29888'
       X-Ratelimit-Reset-Requests:
       - 120ms
       X-Ratelimit-Reset-Tokens:
-      - 226ms
+      - 222ms
       X-Request-Id:
-      - req_757314b2e44943888d2e2538e4d29b58
+      - req_c823682c98ec4abfba89b4e1df92628a
       X-Openai-Proxy-Wasm:
       - v0.1
       Cf-Cache-Status:
       - DYNAMIC
       Set-Cookie:
-      - __cf_bm=A0LMb_ekNgiwz4D6icSt7SWd9izNA5dCyD6jpq0ha2k-1764181525-1.0.1.1-Cv7NTgFG56kqq1PrHRmH2WeJlb7Z7NTeijfenx8w6qwaUbEykHjnRa04_WM5f9die7KuSKjWYGORnrnkEx0b7dPrxxgRFtOLUdzAcmgTZPk;
-        path=/; expires=Wed, 26-Nov-25 18:55:25 GMT; domain=.api.openai.com; HttpOnly;
+      - __cf_bm=2vlUvrYo30TwjP9cRl9pAOWYx7Vr08vCq6SxGDNopSw-1769361128-1.0.1.1-py.pYb_15TnHtMCItnxEJYj.uHA42qXx40qDxBjjurSwAZUYQcbLJCq_cY6Ob1wxShHqka.i6KnDQwpinE7xXAsLmmPixTLFUjTOX.ixDJM;
+        path=/; expires=Sun, 25-Jan-26 17:42:08 GMT; domain=.api.openai.com; HttpOnly;
         Secure; SameSite=None
-      - _cfuvid=OTWkAXRkH8W8DNagNdPqb9Jxx7liJnkYNHnYiRnj2TU-1764181525576-0.0.1.1-604800000;
+      - _cfuvid=aIkzSK7jZTYtaG9ad_Wx.D5_ISzbBjlhxUtRrvlyrbc-1769361128482-0.0.1.1-604800000;
         path=/; domain=.api.openai.com; HttpOnly; Secure; SameSite=None
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains; preload
@@ -78,16 +78,16 @@ http_interactions:
       Server:
       - cloudflare
       Cf-Ray:
-      - 9a4b6da42e948046-GRU
+      - 9c3964c889a2c131-GRU
       Alt-Svc:
       - h3=":443"; ma=86400
     body:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-CgEUfZA2EgSm5o1zRvwM5K4kPAkkZ",
+          "id": "chatcmpl-D1xwdErA23ZhuHAfiUpAJtXp1CLHd",
           "object": "chat.completion",
-          "created": 1764181525,
+          "created": 1769361127,
           "model": "gpt-4.1-2025-04-14",
           "choices": [
             {
@@ -118,7 +118,7 @@ http_interactions:
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_433e8c8649"
+          "system_fingerprint": "fp_1a2c4a5ede"
         }
-  recorded_at: Wed, 26 Nov 2025 18:24:58 GMT
+  recorded_at: Sun, 25 Jan 2026 17:11:27 GMT
 recorded_with: VCR 6.3.1
