--- a/spec/fixtures/cassettes/openai/models/successful_list.yml
+++ b/spec/fixtures/cassettes/openai/models/successful_list.yml
@@ -23,7 +23,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 26 Nov 2025 18:27:07 GMT
+      - Sun, 25 Jan 2026 17:13:35 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -33,11 +33,11 @@ http_interactions:
       Openai-Version:
       - '2020-10-01'
       X-Request-Id:
-      - 555a4a81f81a629b78c73c961f2182c8
+      - 2988e3c79032040f0b2120b31e2df879
       Openai-Processing-Ms:
-      - '305'
+      - '198'
       X-Envoy-Upstream-Service-Time:
-      - '307'
+      - '200'
       X-Openai-Proxy-Wasm:
       - v0.1
       Strict-Transport-Security:
@@ -45,17 +45,17 @@ http_interactions:
       Cf-Cache-Status:
       - DYNAMIC
       Set-Cookie:
-      - __cf_bm=hlwoKl0OcvGN0yQMV6HuWxEjXwqy5tMOZesh3bQ1LQo-1764181627-1.0.1.1-OyYzgYb1mtAUfkM4.9tNL6ahWadHpTdmW6NOXVSMpSUkeJIXNAV_3R.EToSeAvbWYOc0n1bMYHQogHyk5KgOieS8_lMJ.EPK3YVkOP01qK0;
-        path=/; expires=Wed, 26-Nov-25 18:57:07 GMT; domain=.api.openai.com; HttpOnly;
+      - __cf_bm=oJo5TmqEa6Q_LgViVoHdlI9WGR_0yIBI1g98ZApCjj0-1769361215-1.0.1.1-o9M24X7b5QONlSbcrm1L0.ULGYFaN2Zb58lCGw29IxWqkVqnZKGR4dXRFGLpy_NJxMnzm8HG.GMEsxf6IMrjT8istHO9IaECdigPUEaKDjs;
+        path=/; expires=Sun, 25-Jan-26 17:43:35 GMT; domain=.api.openai.com; HttpOnly;
         Secure; SameSite=None
-      - _cfuvid=zsBzKizPTuDb7vjaApl1LcZY_uxdY4TkDx3_hI_Z3T8-1764181627230-0.0.1.1-604800000;
+      - _cfuvid=TgSCmBp0iyhlQGLsxxlYlKpJsodEQ_n1MyNt_IjqAqg-1769361215057-0.0.1.1-604800000;
         path=/; domain=.api.openai.com; HttpOnly; Secure; SameSite=None
       X-Content-Type-Options:
       - nosniff
       Server:
       - cloudflare
       Cf-Ray:
-      - 9a4b701f3bcaf256-GRU
+      - 9c3966e69f24c504-GRU
       Alt-Svc:
       - h3=":443"; ma=86400
     body:
@@ -83,33 +83,33 @@ http_interactions:
               "owned_by": "openai"
             },
             {
-              "id": "gpt-5.1-codex-mini",
+              "id": "gpt-5.2-codex",
               "object": "model",
-              "created": 1763007109,
+              "created": 1766164985,
               "owned_by": "system"
             },
             {
-              "id": "gpt-5.1-chat-latest",
+              "id": "gpt-4o-mini-tts-2025-12-15",
               "object": "model",
-              "created": 1762547951,
+              "created": 1765610837,
               "owned_by": "system"
             },
             {
-              "id": "gpt-5.1-2025-11-13",
+              "id": "gpt-realtime-mini-2025-12-15",
               "object": "model",
-              "created": 1762800353,
+              "created": 1765612007,
               "owned_by": "system"
             },
             {
-              "id": "gpt-5.1",
+              "id": "gpt-audio-mini-2025-12-15",
               "object": "model",
-              "created": 1762800673,
+              "created": 1765760008,
               "owned_by": "system"
             },
             {
-              "id": "gpt-5.1-codex",
+              "id": "chatgpt-image-latest",
               "object": "model",
-              "created": 1762988221,
+              "created": 1765925279,
               "owned_by": "system"
             },
             {
@@ -254,18 +254,6 @@ http_interactions:
               "id": "chatgpt-4o-latest",
               "object": "model",
               "created": 1723515131,
-              "owned_by": "system"
-            },
-            {
-              "id": "gpt-4o-realtime-preview-2024-10-01",
-              "object": "model",
-              "created": 1727131766,
-              "owned_by": "system"
-            },
-            {
-              "id": "gpt-4o-audio-preview-2024-10-01",
-              "object": "model",
-              "created": 1727389042,
               "owned_by": "system"
             },
             {
@@ -653,6 +641,96 @@ http_interactions:
               "owned_by": "system"
             },
             {
+              "id": "gpt-5.1-chat-latest",
+              "object": "model",
+              "created": 1762547951,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-5.1-2025-11-13",
+              "object": "model",
+              "created": 1762800353,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-5.1",
+              "object": "model",
+              "created": 1762800673,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-5.1-codex",
+              "object": "model",
+              "created": 1762988221,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-5.1-codex-mini",
+              "object": "model",
+              "created": 1763007109,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-5.1-codex-max",
+              "object": "model",
+              "created": 1763671532,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-image-1.5",
+              "object": "model",
+              "created": 1764030620,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-5.2-2025-12-11",
+              "object": "model",
+              "created": 1765313028,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-5.2",
+              "object": "model",
+              "created": 1765313051,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-5.2-pro-2025-12-11",
+              "object": "model",
+              "created": 1765343959,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-5.2-pro",
+              "object": "model",
+              "created": 1765343983,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-5.2-chat-latest",
+              "object": "model",
+              "created": 1765344352,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-4o-mini-transcribe-2025-12-15",
+              "object": "model",
+              "created": 1765610407,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-4o-mini-transcribe-2025-03-20",
+              "object": "model",
+              "created": 1765610545,
+              "owned_by": "system"
+            },
+            {
+              "id": "gpt-4o-mini-tts-2025-03-20",
+              "object": "model",
+              "created": 1765610731,
+              "owned_by": "system"
+            },
+            {
               "id": "gpt-3.5-turbo-16k",
               "object": "model",
               "created": 1683758102,
@@ -678,5 +756,5 @@ http_interactions:
             }
           ]
         }
-  recorded_at: Wed, 26 Nov 2025 18:26:40 GMT
+  recorded_at: Sun, 25 Jan 2026 17:12:54 GMT
 recorded_with: VCR 6.3.1
