--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   linux:
     runs-on: ubuntu-latest
-    name: Ruby ${{ matrix.ruby-version }}
+    name: Linux (Ruby ${{ matrix.ruby-version }})
     strategy:
       matrix:
         ruby-version: ['3.2', '3.3', '3.4', '4.0']
@@ -28,16 +28,47 @@ jobs:
         JSON_PARSER: ${{ matrix.json-parser }}
       run: bundle exec rake
 
- # hardenedbsd:
- #   runs-on: ubuntu-latest
- #   name: hardenedBSD
- #   steps:
- #   - uses: actions/checkout@v4
- #   - name: Run tests (hardenedBSD)
- #     uses: 0x1eef/hardenedbsd-vm@v1
- #     with:
- #       release: '16-CURRENT'
- #       run: |
- #         mdo -u root pkg-static install -y rubygem-bundler
- #         bundle install
- #         bundle exec rake
+  openbsd:
+    runs-on: ubuntu-latest
+    name: OpenBSD
+    env:
+      bundler: "bundle33"
+    steps:
+    - uses: actions/checkout@v4
+    - name: Run tests
+      uses: vmactions/openbsd-vm@v1
+      with:
+        copyback: false
+        envs: "bundler"
+        run: |
+          pkg_add ruby-3.3.9
+          bundle33 install
+          bundle33 exec rake
+
+  netbsd:
+    runs-on: ubuntu-latest
+    name: NetBSD
+    steps:
+    - uses: actions/checkout@v4
+    - name: Run tests
+      uses: vmactions/netbsd-vm@v1
+      with:
+        copyback: false
+        run: |
+          pkg_add ruby-3.3.10
+          bundle33 install
+          bundle33 exec rake
+
+  freebsd:
+    runs-on: ubuntu-latest
+    name: FreeBSD
+    steps:
+    - uses: actions/checkout@v4
+    - name: Run tests
+      uses: 0x1eef/hardenedbsd-vm@v1
+      with:
+        release: '16-CURRENT'
+        run: |
+          mdo -u root pkg-static install -y rubygem-bundler
+          bundle install
+          bundle exec rake
