--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
   openbsd:
     runs-on: ubuntu-latest
     name: OpenBSD
+    continue-on-error: true
     env:
       bundler: "bundle33"
     steps:
@@ -48,6 +49,7 @@ jobs:
   netbsd:
     runs-on: ubuntu-latest
     name: NetBSD
+    continue-on-error: true
     steps:
     - uses: actions/checkout@v4
     - name: Run tests
@@ -62,6 +64,7 @@ jobs:
   freebsd:
     runs-on: ubuntu-latest
     name: FreeBSD
+    continue-on-error: true
     steps:
     - uses: actions/checkout@v4
     - name: Run tests
