--- a/spec/fixtures/cassettes/openai/models/successful_list.yml
+++ b/spec/fixtures/cassettes/openai/models/successful_list.yml
@@ -23,7 +23,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Sun, 22 Feb 2026 02:19:17 GMT
+      - Mon, 23 Feb 2026 10:10:13 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -35,23 +35,23 @@ http_interactions:
       Openai-Version:
       - '2020-10-01'
       X-Request-Id:
-      - 23f36c73-6b49-4b12-93b1-3147cf4c336d
+      - 501d54f2-80e0-45a6-a124-14dcbe10092d
       Openai-Processing-Ms:
-      - '235'
+      - '767'
       X-Openai-Proxy-Wasm:
       - v0.1
       Cf-Cache-Status:
       - DYNAMIC
       Set-Cookie:
-      - __cf_bm=5TZYtvaEdtXe1mA0_QKI_LxpxPwXI7aNUyfKfzFkIdQ-1771726757.3002865-1.0.1.1-tNsERR3DF_j97uNu3MZLMiAbAEILdDu4pcHx_xyCeJGIPml34sQ0KqAbnq3SAU7BJGUlZyd_nRFNGRe8GPK6arkje.qPPwV.gBE4k_ZcwW4eDVTaxBlVQJojQjdjpCsM;
-        HttpOnly; Secure; Path=/; Domain=api.openai.com; Expires=Sun, 22 Feb 2026
-        02:49:17 GMT
+      - __cf_bm=I.PhI65RTFCoGdX8sj21IMGwa6Bj63rCkBnZgtwHHwQ-1771841412.29564-1.0.1.1-c9A7NTdBq1W83D0fjyqJp0unnVdz4HbKvCxUMv2FH61kHimPlguac.nYNpkoNwU9Ykvl4r6Y5B9dW3BZafbcE18XjzV7xIItdSe28D84_Q2qRxIxMJGUWFa_fpSj5rEH;
+        HttpOnly; Secure; Path=/; Domain=api.openai.com; Expires=Mon, 23 Feb 2026
+        10:40:13 GMT
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains; preload
       X-Content-Type-Options:
       - nosniff
       Cf-Ray:
-      - 9d1aff691a505402-GRU
+      - 9d25ee9ad9be6276-GRU
       Alt-Svc:
       - h3=":443"; ma=86400
     body:
@@ -740,5 +740,5 @@ http_interactions:
             }
           ]
         }
-  recorded_at: Sun, 22 Feb 2026 02:19:17 GMT
+  recorded_at: Mon, 23 Feb 2026 10:10:10 GMT
 recorded_with: VCR 6.3.1
