--- a/spec/fixtures/cassettes/gemini/chat/completion_contract.yml
+++ b/spec/fixtures/cassettes/gemini/chat/completion_contract.yml
@@ -29,7 +29,7 @@ http_interactions:
       - Referer
       - X-Origin
       Date:
-      - Wed, 07 Jan 2026 23:30:20 GMT
+      - Mon, 23 Feb 2026 11:40:31 GMT
       Server:
       - scaffolding on HTTPServer2
       X-Xss-Protection:
@@ -39,7 +39,7 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       Server-Timing:
-      - gfet4t7; dur=1674
+      - gfet4t7; dur=686
       Alt-Svc:
       - h3=":443"; ma=2592000,h3-29=":443"; ma=2592000
       Transfer-Encoding:
@@ -53,7 +53,7 @@ http_interactions:
               "content": {
                 "parts": [
                   {
-                    "text": "Hello to you too! It's a classic for a reason. How can I help you today?"
+                    "text": "Hello there! How can I help you today?"
                   }
                 ],
                 "role": "model"
@@ -64,18 +64,18 @@ http_interactions:
           ],
           "usageMetadata": {
             "promptTokenCount": 5,
-            "candidatesTokenCount": 21,
-            "totalTokenCount": 66,
+            "candidatesTokenCount": 10,
+            "totalTokenCount": 50,
             "promptTokensDetails": [
               {
                 "modality": "TEXT",
                 "tokenCount": 5
               }
             ],
-            "thoughtsTokenCount": 40
+            "thoughtsTokenCount": 35
           },
           "modelVersion": "gemini-2.5-flash",
-          "responseId": "jOxeaaHgEq23mtkPtdKOyAY"
+          "responseId": "rjycadvHIrGJz7IPz6rJ4AU"
         }
-  recorded_at: Wed, 07 Jan 2026 23:30:13 GMT
+  recorded_at: Mon, 23 Feb 2026 11:40:27 GMT
 recorded_with: VCR 6.3.1
