--- a/spec/fixtures/cassettes/gemini/chat/llm_chat_stream_stringio.yml
+++ b/spec/fixtures/cassettes/gemini/chat/llm_chat_stream_stringio.yml
@@ -5,11 +5,11 @@ http_interactions:
     uri: https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:streamGenerateContent?alt=sse&key=TOKEN
     body:
       encoding: UTF-8
-      string: '{"contents":[{"role":"user","parts":[{"text":"Keep your answers short
-        and concise, and provide three answers to the three questions. There should
-        be one answer per line. An answer should be a number, for example: 5. Nothing
-        else"}]},{"role":"user","parts":[{"text":"What is 3+2 ?"}]},{"role":"user","parts":[{"text":"What
-        is 5+5 ?"}]},{"role":"user","parts":[{"text":"What is 5+7 ?"}]}]}'
+      string: '{"contents":[{"role":"user","parts":[{"text":"What is 3+2 ?"}]},{"role":"user","parts":[{"text":"What
+        is 5+5 ?"}]},{"role":"user","parts":[{"text":"What is 5+7 ?"}]},{"role":"user","parts":[{"text":"Keep
+        your answers short and concise, and provide three answers to the three questions.
+        There should be one answer per line. An answer should be a number, for example:
+        5. Nothing else"}]}]}'
     headers:
       Content-Type:
       - application/json
@@ -37,7 +37,7 @@ http_interactions:
       Transfer-Encoding:
       - chunked
       Date:
-      - Sat, 13 Sep 2025 19:32:49 GMT
+      - Mon, 23 Feb 2026 11:40:32 GMT
       Server:
       - scaffolding on HTTPServer2
       X-Xss-Protection:
@@ -47,15 +47,20 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       Server-Timing:
-      - gfet4t7; dur=1615
+      - gfet4t7; dur=991
       Alt-Svc:
       - h3=":443"; ma=2592000,h3-29=":443"; ma=2592000
     body:
       encoding: UTF-8
-      string: "data: {\"candidates\": [{\"content\": {\"parts\": [{\"text\": \"5\\n10\\n12\"}],\"role\":
-        \"model\"},\"finishReason\": \"STOP\",\"index\": 0}],\"usageMetadata\": {\"promptTokenCount\":
-        64,\"candidatesTokenCount\": 7,\"totalTokenCount\": 146,\"promptTokensDetails\":
-        [{\"modality\": \"TEXT\",\"tokenCount\": 64}],\"thoughtsTokenCount\": 75},\"modelVersion\":
-        \"gemini-2.5-flash\",\"responseId\": \"4cbFaLDuHPuhz7IPzsjO0Ak\"}\r\n\r\n"
-  recorded_at: Sat, 13 Sep 2025 19:32:34 GMT
+      string: "data: {\"candidates\": [{\"content\": {\"parts\": [{\"text\": \"5\\n10\"}],\"role\":
+        \"model\"},\"index\": 0}],\"usageMetadata\": {\"promptTokenCount\": 64,\"candidatesTokenCount\":
+        4,\"totalTokenCount\": 179,\"promptTokensDetails\": [{\"modality\": \"TEXT\",\"tokenCount\":
+        64}],\"thoughtsTokenCount\": 111},\"modelVersion\": \"gemini-2.5-flash\",\"responseId\":
+        \"rzycacy_FbvSz7IPn7_nuQU\"}\r\n\r\ndata: {\"candidates\": [{\"content\":
+        {\"parts\": [{\"text\": \"\\n12\"}],\"role\": \"model\"},\"finishReason\":
+        \"STOP\",\"index\": 0}],\"usageMetadata\": {\"promptTokenCount\": 64,\"candidatesTokenCount\":
+        6,\"totalTokenCount\": 181,\"promptTokensDetails\": [{\"modality\": \"TEXT\",\"tokenCount\":
+        64}],\"thoughtsTokenCount\": 111},\"modelVersion\": \"gemini-2.5-flash\",\"responseId\":
+        \"rzycacy_FbvSz7IPn7_nuQU\"}\r\n\r\n"
+  recorded_at: Mon, 23 Feb 2026 11:40:28 GMT
 recorded_with: VCR 6.3.1
